--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ main{padding:14px;max-width:560px;margin:auto}
 .card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
 h2{margin:0 0 8px 0;font-size:18px}
 .badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
+.row{display:flex;gap:10px;flex-wrap:wrap}
 button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
 .small{font-size:14px;padding:10px}
 .toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
@@ -55,98 +56,283 @@ function toast(a,b="",ms=2200){
   document.body.appendChild(d);
   setTimeout(()=>d.remove(),ms);
 }
-function vibrate(ms){ try{ navigator.vibrate && navigator.vibrate(ms);}catch(_){} }
+
+function vibrate(ms){
+  try{
+    if (navigator.vibrate) navigator.vibrate(ms);
+  }catch(_){}
+}
 
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
-/* ===== POST ===== */
-async function post(action, photoDataUrl){
-  const payload={ datetime:new Date().toISOString(), site, tool, toolName, action, user:getUser() };
-  if(photoDataUrl) payload.photoDataUrl=photoDataUrl;
+/* ===== 追加：連打ガード/体感改善 ===== */
+let busy=false;
+function setBusy(on, msg){
+  busy=!!on;
+  if(on){
+    toast(msg || "送信中…","",1200);
+  }
+}
 
-  const r=await fetch(GAS_URL,{ method:"POST", body:JSON.stringify(payload) });
+/* ===== 通信 ===== */
+async function post(action, photoDataUrl){
+  const payload={
+    datetime:new Date().toISOString(),
+    site, tool, toolName,
+    action, user:getUser()
+  };
+  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
+
+  // ★CORS回避：Content-Type を付けない（プリフライト回避）
+  const r = await fetch(GAS_URL,{
+    method:"POST",
+    body:JSON.stringify(payload)
+  });
+
   if(!r.ok) throw new Error("http "+r.status);
-  const js=await r.json();
-  if(js.result!=="ok") throw new Error(js.message||"gas error");
+  const js = await r.json().catch(()=>({}));
+  if(js.result!=="ok") throw new Error(js.message || "gas error");
 }
 
 async function getStatus(){
-  const r=await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`);
-  const js=await r.json();
-  if(js.result!=="ok") throw new Error();
-  return js.items||[];
+  const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`;
+  const r = await fetch(url, {method:"GET"});
+  if(!r.ok) throw new Error("http "+r.status);
+  const js = await r.json();
+  if(js.result!=="ok") throw new Error("status error");
+  return js.items || [];
 }
 
-/* ===== UI ===== */
+/* ===== カメラ（返却は必須） ===== */
+let stream=null;
+
 function showUserSelect(){
-  app.innerHTML=`<div class="card"><h2>この端末の名前</h2>${
-    MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")
-  }</div>`;
+  app.innerHTML=`
+    <div class="card">
+      <h2>この端末の名前<span class="badge">最初の1回だけ</span></h2>
+      ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
+    </div>`;
 }
-window.pick=n=>{ setUser(n); render(); };
+window.pick=n=>{setUser(n);render();};
 
 function header(){
-  hdr.textContent=`現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
+  hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
 }
 
-function ui(items){
-  const me=items.find(x=>x.tool===tool);
-  const st=!me?"異常なし":me.status==="OUT"?"持ち出し中":me.status==="PENDING"?"返却確認待ち":"異常なし";
+/* ===== 追加：ローカル即時反映（体感改善） ===== */
+let lastItemsCache=[];
+function upsertLocal_(rec){
+  // lastItemsCache の中で同じ tool を上書き、なければ追加
+  const idx = lastItemsCache.findIndex(x=>x.tool===rec.tool);
+  const at = rec.at || new Date().toISOString();
+  const merged = {
+    site: rec.site || site,
+    tool: rec.tool || tool,
+    toolName: rec.toolName || toolName,
+    status: rec.status,
+    by: rec.by || getUser(),
+    at,
+    photoUrl: rec.photoUrl || ""
+  };
+  if(idx>=0) lastItemsCache[idx]=merged;
+  else lastItemsCache.push(merged);
+}
+
+function ui(statusItems){
+  // キャッシュ更新（一覧の体感）
+  lastItemsCache = Array.isArray(statusItems) ? statusItems.slice() : [];
+
+  const byTool = {};
+  for(const it of statusItems){
+    byTool[it.tool] = it;
+  }
+  const me = byTool[tool];
+
+  const statusText = !tool ? "" : (
+    !me ? "異常なし" :
+    me.status==="OUT" ? `${me.toolName} を持ち出し中` :
+    me.status==="PENDING" ? `${me.toolName} 返却確認待ち` :
+    "異常なし"
+  );
+
+  const needConfirm = me && me.status==="PENDING";
+  const photoUrl = (me && me.photoUrl) ? me.photoUrl : "";
+
   app.innerHTML=`
-  <div class="card"><h2>状態</h2><div>${st}</div>
-    ${me?.photoUrl?`<button class="small" onclick="open('${me.photoUrl}')">写真</button>`:""}
-    ${me?.status==="PENDING"?`<button onclick="confirmOk()">確認</button>`:""}
-  </div>
-  <div class="card">
-    <button onclick="take()">持ち出し</button>
-    <button onclick="startReturn()">返却</button>
-    <div id="cam" class="hidden">
-      <video id="v" autoplay playsinline></video>
-      <button onclick="shotAndSend()">撮影して返却</button>
+    <div class="card ${needConfirm?'statePending': (me && me.status==='OUT'?'stateOut':'stateIn')}">
+      <h2>状態</h2>
+      <div style="font-size:20px">${statusText}</div>
+      ${needConfirm ? `<div style="opacity:.8;margin-top:8px">写真を確認してから「確認」を押す</div>` : ``}
+      ${photoUrl ? `<button class="small" onclick="openPhoto('${photoUrl.replace(/'/g,"%27")}')">写真を見る</button>` : ``}
+      ${needConfirm ? `<button onclick="confirmOk()">確認</button>` : ``}
     </div>
-  </div>`;
+
+    <div class="card">
+      <h2>${toolName}</h2>
+      <button onclick="take()" ${busy?'disabled':''}>持ち出し</button>
+      <button onclick="startReturn()" ${busy?'disabled':''}>返却（写真必須）</button>
+
+      <div id="cam" class="card hidden" style="margin-top:12px">
+        <video id="v" autoplay playsinline></video>
+        <button onclick="shotAndSend()" ${busy?'disabled':''}>撮影して返却</button>
+        <button class="small" onclick="cancelCam()">中止</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>現場の一覧</h2>
+      ${renderList(statusItems)}
+    </div>
+  `;
 }
 
-/* ===== カメラ（超低画質） ===== */
-let stream=null;
+function renderList(items){
+  const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
+  if(active.length===0){
+    return `<div class="item"><b>異常なし</b><div class="meta">持ち出し中／返却確認待ちはありません</div></div>`;
+  }
+  return `<div class="list">` + active.map(x=>{
+    const label = (x.status==="OUT") ? "持ち出し中" : "返却確認待ち";
+    const t = x.at ? new Date(x.at).toLocaleString() : "";
+    return `
+      <div class="item ${x.status==="OUT"?'stateOut':'statePending'}">
+        <b>${x.toolName}（${x.tool}）</b>
+        <div class="meta">${label} / ${x.by||""} / ${t}</div>
+        ${x.photoUrl ? `<button class="small" onclick="openPhoto('${x.photoUrl.replace(/'/g,"%27")}')">写真</button>` : ``}
+      </div>
+    `;
+  }).join("") + `</div>`;
+}
+
+window.openPhoto=(u)=>{ window.open(u, "_blank"); };
+
+window.take=async()=>{
+  if(busy) return;
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
+  setBusy(true,"送信中…");
+  try{
+    await post("持ち出し");
+    vibrate(80);
+    // 体感：即OUT反映 → 次にサーバ状態で上書き
+    upsertLocal_({tool, toolName, status:"OUT", by:getUser(), at:new Date().toISOString()});
+    ui(lastItemsCache);
+    toast("持ち出しを記録","");
+    await refresh();
+  }catch(e){
+    toast("通信エラー","記録できていません");
+  }finally{
+    setBusy(false);
+  }
+};
+
+window.startReturn=async()=>{
+  if(busy) return;
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
+  try{
+    const cam=document.getElementById("cam");
+    cam.classList.remove("hidden");
+    const v=document.getElementById("v");
+    stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
+    v.srcObject = stream;
+  }catch(e){
+    toast("カメラ起動できない","許可/HTTPS/設定を確認");
+  }
+};
+
+window.cancelCam=()=>{
+  try{ if(stream) stream.getTracks().forEach(t=>t.stop()); }catch(_){}
+  stream=null;
+  const cam=document.getElementById("cam");
+  if(cam) cam.classList.add("hidden");
+};
+
+/* ★超低画質：長辺640 / 品質0.4（GAS制限回避） */
 async function captureJpegDataUrl_(){
   const v=document.getElementById("v");
+  if(!v) throw new Error("video not found");
   await new Promise(r=>setTimeout(r,150));
+
+  const srcW=v.videoWidth||1280, srcH=v.videoHeight||720;
   const MAX=640;
-  let w=v.videoWidth,h=v.videoHeight;
-  if(w>h&&w>MAX){h=h*MAX/w;w=MAX;} else if(h>w&&h>MAX){w=w*MAX/h;h=MAX;}
+
+  let w=srcW, h=srcH;
+  if (w > h && w > MAX) { h = Math.round(h * MAX / w); w = MAX; }
+  else if (h >= w && h > MAX) { w = Math.round(w * MAX / h); h = MAX; }
+
   const c=document.createElement("canvas");
-  c.width=w;c.height=h;
-  c.getContext("2d").drawImage(v,0,0,w,h);
+  c.width=w; c.height=h;
+  const ctx=c.getContext("2d");
+  ctx.drawImage(v,0,0,w,h);
+
   return c.toDataURL("image/jpeg",0.4);
 }
 
-window.take=async()=>{ await post("持ち出し"); vibrate(80); refresh(); };
-window.startReturn=async()=>{
-  const cam=document.getElementById("cam");
-  cam.classList.remove("hidden");
-  const v=document.getElementById("v");
-  stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
-  v.srcObject=stream;
-};
 window.shotAndSend=async()=>{
-  const img=await captureJpegDataUrl_();
-  stream.getTracks().forEach(t=>t.stop());
-  await post("返却",img);
-  vibrate([60,60,60]);
-  refresh();
+  if(busy) return;
+  try{
+    setBusy(true,"送信中…");
+    const dataUrl = await captureJpegDataUrl_();
+    cancelCam();
+
+    await post("返却", dataUrl);
+    vibrate([60,60,60]);
+
+    // 体感：即PENDING反映 → 次にサーバ状態で上書き
+    upsertLocal_({tool, toolName, status:"PENDING", by:getUser(), at:new Date().toISOString()});
+    ui(lastItemsCache);
+
+    toast("返却を記録","確認待ち");
+    await refresh();
+  }catch(e){
+    toast("通信エラー","記録できていません");
+  }finally{
+    setBusy(false);
+  }
 };
-window.confirmOk=async()=>{ await post("確認"); refresh(); };
+
+window.confirmOk=async()=>{
+  if(busy) return;
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
+  setBusy(true,"送信中…");
+  try{
+    await post("確認");
+    vibrate(80);
+
+    // 体感：即IN反映 → 次にサーバ状態で上書き
+    upsertLocal_({tool, toolName, status:"IN", by:getUser(), at:new Date().toISOString()});
+    ui(lastItemsCache);
+
+    toast("確認を記録","");
+    await refresh();
+  }catch(e){
+    toast("通信エラー","記録できていません");
+  }finally{
+    setBusy(false);
+  }
+};
 
 async function refresh(){
-  const items=await getStatus();
-  ui(items);
+  try{
+    const items = await getStatus();
+    ui(items);
+  }catch(e){
+    // 状態取得失敗でも操作画面は出す（キャッシュがあればそれを表示）
+    if(lastItemsCache.length){
+      ui(lastItemsCache);
+    }else{
+      ui([]);
+    }
+    toast("通信エラー","状態を取得できません");
+  }
 }
+
 function render(){
   header();
-  if(!getUser()) return showUserSelect();
+  if(!getUser()){ showUserSelect(); return; }
   refresh();
+  // 15秒ごとに自動更新（できないなら無視される）
+  setInterval(()=>{ if(!busy) refresh(); }, 15000);
 }
 render();
 </script>
