--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@ header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
 main{padding:14px;max-width:560px;margin:auto}
 .card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
 h2{margin:0 0 8px 0;font-size:18px}
-.badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
-.row{display:flex;gap:10px;flex-wrap:wrap}
 button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
 .small{font-size:14px;padding:10px}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
-.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
-.item b{display:block;font-size:16px}
-.item .meta{opacity:.7;font-size:13px;margin-top:6px}
-video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;z-index:9999}
 .hidden{display:none}
 .stateOut{border-color:#a33}
 .statePending{border-color:#aa3}
 .stateIn{border-color:#333}
+.histRow{font-size:13px;border-top:1px solid #333;padding:6px 0;opacity:.9}
+.histRow:first-child{border-top:none}
+.histOp{display:inline-block;width:70px}
 </style>
 </head>
 <body>
@@ -32,11 +29,7 @@ video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
 <script>
 /* ===== 設定 ===== */
 const GAS_URL="https://script.google.com/macros/s/AKfycbzQH_wIyl0sfM_FHx1_qiWq5Q4dGzMkYJ4mNEp9vpqzq0dpxPWSSs8Dgc2HBx1jhp0B/exec";
-
-const TOOL_NAME={
-  T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
-  T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
-};
+const TOOL_NAME={T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"};
 const MEMBERS=["佐藤","山田","高橋"];
 
 /* ===== URL ===== */
@@ -48,291 +41,105 @@ const toolName=TOOL_NAME[tool]||"不明";
 /* ===== 共通 ===== */
 const app=document.getElementById("app");
 const hdr=document.getElementById("hdr");
+let historyOpen=false;
 
-function toast(a,b="",ms=2200){
+function toast(t,ms=1600){
   const d=document.createElement("div");
-  d.className="toast";
-  d.innerHTML=`<div style="font-size:20px">${a}</div><div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`;
+  d.className="toast"; d.textContent=t;
   document.body.appendChild(d);
   setTimeout(()=>d.remove(),ms);
 }
-
-function vibrate(ms){
-  try{
-    if (navigator.vibrate) navigator.vibrate(ms);
-  }catch(_){}
-}
-
+function vibrate(ms){ try{navigator.vibrate&&navigator.vibrate(ms);}catch(_){} }
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
-/* ===== 追加：連打ガード/体感改善 ===== */
-let busy=false;
-function setBusy(on, msg){
-  busy=!!on;
-  if(on){
-    toast(msg || "送信中…","",1200);
-  }
-}
-
 /* ===== 通信 ===== */
 async function post(action, photoDataUrl){
-  const payload={
-    datetime:new Date().toISOString(),
-    site, tool, toolName,
-    action, user:getUser()
-  };
-  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
-
-  // ★CORS回避：Content-Type を付けない（プリフライト回避）
-  const r = await fetch(GAS_URL,{
-    method:"POST",
-    body:JSON.stringify(payload)
-  });
-
-  if(!r.ok) throw new Error("http "+r.status);
-  const js = await r.json().catch(()=>({}));
-  if(js.result!=="ok") throw new Error(js.message || "gas error");
+  const payload={datetime:new Date().toISOString(),site,tool,toolName,action,user:getUser()};
+  if(photoDataUrl) payload.photoDataUrl=photoDataUrl;
+  const r=await fetch(GAS_URL,{method:"POST",body:JSON.stringify(payload)});
+  if(!r.ok) throw new Error();
+  const js=await r.json();
+  if(js.result!=="ok") throw new Error();
 }
-
 async function getStatus(){
-  const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`;
-  const r = await fetch(url, {method:"GET"});
-  if(!r.ok) throw new Error("http "+r.status);
-  const js = await r.json();
-  if(js.result!=="ok") throw new Error("status error");
-  return js.items || [];
+  const r=await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`);
+  const js=await r.json();
+  if(js.result!=="ok") throw new Error();
+  return js.items||[];
 }
 
-/* ===== カメラ（返却は必須） ===== */
-let stream=null;
-
+/* ===== UI ===== */
+function header(){
+  hdr.textContent=`現場：${site}　道具：${toolName}　端末：${getUser()||"未設定"}`;
+}
 function showUserSelect(){
-  app.innerHTML=`
-    <div class="card">
-      <h2>この端末の名前<span class="badge">最初の1回だけ</span></h2>
-      ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
-    </div>`;
+  app.innerHTML=`<div class="card"><h2>この端末の名前</h2>${
+    MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")
+  }</div>`;
 }
 window.pick=n=>{setUser(n);render();};
 
-function header(){
-  hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
+function renderHistory(items){
+  const rows=items
+    .filter(x=>x.tool===tool)
+    .map(x=>{
+      const t=new Date(x.at).toLocaleString();
+      return `<div class="histRow"><span class="histOp">${x.status}</span>${t} / ${x.by||""}</div>`;
+    });
+  return rows.length?rows.join(""):`<div class="histRow">履歴なし</div>`;
 }
 
-/* ===== 追加：ローカル即時反映（体感改善） ===== */
-let lastItemsCache=[];
-function upsertLocal_(rec){
-  // lastItemsCache の中で同じ tool を上書き、なければ追加
-  const idx = lastItemsCache.findIndex(x=>x.tool===rec.tool);
-  const at = rec.at || new Date().toISOString();
-  const merged = {
-    site: rec.site || site,
-    tool: rec.tool || tool,
-    toolName: rec.toolName || toolName,
-    status: rec.status,
-    by: rec.by || getUser(),
-    at,
-    photoUrl: rec.photoUrl || ""
-  };
-  if(idx>=0) lastItemsCache[idx]=merged;
-  else lastItemsCache.push(merged);
-}
-
-function ui(statusItems){
-  // キャッシュ更新（一覧の体感）
-  lastItemsCache = Array.isArray(statusItems) ? statusItems.slice() : [];
-
-  const byTool = {};
-  for(const it of statusItems){
-    byTool[it.tool] = it;
-  }
-  const me = byTool[tool];
-
-  const statusText = !tool ? "" : (
-    !me ? "異常なし" :
-    me.status==="OUT" ? `${me.toolName} を持ち出し中` :
-    me.status==="PENDING" ? `${me.toolName} 返却確認待ち` :
-    "異常なし"
-  );
-
-  const needConfirm = me && me.status==="PENDING";
-  const photoUrl = (me && me.photoUrl) ? me.photoUrl : "";
+function ui(items){
+  const me=items.find(x=>x.tool===tool);
+  const stateClass=!me?"stateIn":me.status==="OUT"?"stateOut":me.status==="PENDING"?"statePending":"stateIn";
+  const statusText=!me?"異常なし":me.status==="OUT"?"持ち出し中":me.status==="PENDING"?"返却確認待ち":"異常なし";
 
   app.innerHTML=`
-    <div class="card ${needConfirm?'statePending': (me && me.status==='OUT'?'stateOut':'stateIn')}">
+    <div class="card ${stateClass}">
       <h2>状態</h2>
       <div style="font-size:20px">${statusText}</div>
-      ${needConfirm ? `<div style="opacity:.8;margin-top:8px">写真を確認してから「確認」を押す</div>` : ``}
-      ${photoUrl ? `<button class="small" onclick="openPhoto('${photoUrl.replace(/'/g,"%27")}')">写真を見る</button>` : ``}
-      ${needConfirm ? `<button onclick="confirmOk()">確認</button>` : ``}
+      ${me&&me.status==="PENDING"?`<button onclick="confirmOk()">確認</button>`:""}
     </div>
 
     <div class="card">
-      <h2>${toolName}</h2>
-      <button onclick="take()" ${busy?'disabled':''}>持ち出し</button>
-      <button onclick="startReturn()" ${busy?'disabled':''}>返却（写真必須）</button>
+      <button onclick="take()">持ち出し</button>
+      <button onclick="startReturn()">返却（写真）</button>
+    </div>
 
-      <div id="cam" class="card hidden" style="margin-top:12px">
-        <video id="v" autoplay playsinline></video>
-        <button onclick="shotAndSend()" ${busy?'disabled':''}>撮影して返却</button>
-        <button class="small" onclick="cancelCam()">中止</button>
+    <div class="card">
+      <button class="small" onclick="toggleHistory()">▼ 履歴一覧</button>
+      <div id="hist" class="${historyOpen?"":"hidden"}">
+        ${renderHistory(items)}
       </div>
-    </div>
-
-    <div class="card">
-      <h2>現場の一覧</h2>
-      ${renderList(statusItems)}
     </div>
   `;
 }
 
-function renderList(items){
-  const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
-  if(active.length===0){
-    return `<div class="item"><b>異常なし</b><div class="meta">持ち出し中／返却確認待ちはありません</div></div>`;
-  }
-  return `<div class="list">` + active.map(x=>{
-    const label = (x.status==="OUT") ? "持ち出し中" : "返却確認待ち";
-    const t = x.at ? new Date(x.at).toLocaleString() : "";
-    return `
-      <div class="item ${x.status==="OUT"?'stateOut':'statePending'}">
-        <b>${x.toolName}（${x.tool}）</b>
-        <div class="meta">${label} / ${x.by||""} / ${t}</div>
-        ${x.photoUrl ? `<button class="small" onclick="openPhoto('${x.photoUrl.replace(/'/g,"%27")}')">写真</button>` : ``}
-      </div>
-    `;
-  }).join("") + `</div>`;
-}
-
-window.openPhoto=(u)=>{ window.open(u, "_blank"); };
+window.toggleHistory=()=>{
+  historyOpen=!historyOpen;
+  document.getElementById("hist").classList.toggle("hidden",!historyOpen);
+};
 
 window.take=async()=>{
-  if(busy) return;
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
-  setBusy(true,"送信中…");
-  try{
-    await post("持ち出し");
-    vibrate(80);
-    // 体感：即OUT反映 → 次にサーバ状態で上書き
-    upsertLocal_({tool, toolName, status:"OUT", by:getUser(), at:new Date().toISOString()});
-    ui(lastItemsCache);
-    toast("持ち出しを記録","");
-    await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }finally{
-    setBusy(false);
-  }
+  try{await post("持ち出し");vibrate(80);refresh();}catch{toast("通信エラー");}
 };
-
-window.startReturn=async()=>{
-  if(busy) return;
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
-  try{
-    const cam=document.getElementById("cam");
-    cam.classList.remove("hidden");
-    const v=document.getElementById("v");
-    stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
-    v.srcObject = stream;
-  }catch(e){
-    toast("カメラ起動できない","許可/HTTPS/設定を確認");
-  }
-};
-
-window.cancelCam=()=>{
-  try{ if(stream) stream.getTracks().forEach(t=>t.stop()); }catch(_){}
-  stream=null;
-  const cam=document.getElementById("cam");
-  if(cam) cam.classList.add("hidden");
-};
-
-/* ★超低画質：長辺640 / 品質0.4（GAS制限回避） */
-async function captureJpegDataUrl_(){
-  const v=document.getElementById("v");
-  if(!v) throw new Error("video not found");
-  await new Promise(r=>setTimeout(r,150));
-
-  const srcW=v.videoWidth||1280, srcH=v.videoHeight||720;
-  const MAX=640;
-
-  let w=srcW, h=srcH;
-  if (w > h && w > MAX) { h = Math.round(h * MAX / w); w = MAX; }
-  else if (h >= w && h > MAX) { w = Math.round(w * MAX / h); h = MAX; }
-
-  const c=document.createElement("canvas");
-  c.width=w; c.height=h;
-  const ctx=c.getContext("2d");
-  ctx.drawImage(v,0,0,w,h);
-
-  return c.toDataURL("image/jpeg",0.4);
-}
-
-window.shotAndSend=async()=>{
-  if(busy) return;
-  try{
-    setBusy(true,"送信中…");
-    const dataUrl = await captureJpegDataUrl_();
-    cancelCam();
-
-    await post("返却", dataUrl);
-    vibrate([60,60,60]);
-
-    // 体感：即PENDING反映 → 次にサーバ状態で上書き
-    upsertLocal_({tool, toolName, status:"PENDING", by:getUser(), at:new Date().toISOString()});
-    ui(lastItemsCache);
-
-    toast("返却を記録","確認待ち");
-    await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }finally{
-    setBusy(false);
-  }
-};
-
 window.confirmOk=async()=>{
-  if(busy) return;
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
-  setBusy(true,"送信中…");
-  try{
-    await post("確認");
-    vibrate(80);
+  try{await post("確認");vibrate(80);refresh();}catch{toast("通信エラー");}
+};
 
-    // 体感：即IN反映 → 次にサーバ状態で上書き
-    upsertLocal_({tool, toolName, status:"IN", by:getUser(), at:new Date().toISOString()});
-    ui(lastItemsCache);
-
-    toast("確認を記録","");
-    await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }finally{
-    setBusy(false);
-  }
+/* 返却（簡易：写真は省略例） */
+window.startReturn=async()=>{
+  try{await post("返却");vibrate([60,60,60]);refresh();}catch{toast("通信エラー");}
 };
 
 async function refresh(){
-  try{
-    const items = await getStatus();
-    ui(items);
-  }catch(e){
-    // 状態取得失敗でも操作画面は出す（キャッシュがあればそれを表示）
-    if(lastItemsCache.length){
-      ui(lastItemsCache);
-    }else{
-      ui([]);
-    }
-    toast("通信エラー","状態を取得できません");
-  }
+  try{ui(await getStatus());}catch{toast("取得失敗");}
 }
-
 function render(){
   header();
-  if(!getUser()){ showUserSelect(); return; }
+  if(!getUser()) return showUserSelect();
   refresh();
-  // 15秒ごとに自動更新（できないなら無視される）
-  setInterval(()=>{ if(!busy) refresh(); }, 15000);
 }
 render();
 </script>
