--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
-<!-- 既存 index.html はそのまま -->
-<script>
-// ★ 既存コードは省略（変更なし） ★
+<!doctype html>
+<html lang="ja">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>器具員数確認</title>
+<style>
+body{margin:0;background:#111;color:#fff;font-family:-apple-system}
+header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
+main{padding:14px;max-width:560px;margin:auto}
+.card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
+h2{margin:0 0 8px 0;font-size:18px}
+.badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
+button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
+.small{font-size:14px;padding:10px}
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
+.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
+.item b{display:block;font-size:16px}
+.item .meta{opacity:.7;font-size:13px;margin-top:6px}
+video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
+.hidden{display:none}
+.stateOut{border-color:#a33}
+.statePending{border-color:#aa3}
+.stateIn{border-color:#333}
+</style>
+</head>
+<body>
+<header id="hdr"></header>
+<main id="app"></main>
 
+<script>
+/* ===== 設定 ===== */
+const GAS_URL="https://script.google.com/macros/s/AKfycbzQH_wIyl0sfM_FHx1_qiWq5Q4dGzMkYJ4mNEp9vpqzq0dpxPWSSs8Dgc2HBx1jhp0B/exec";
+
+const TOOL_NAME={
+  T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
+  T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
+};
+const MEMBERS=["佐藤","山田","高橋"];
+
+/* ===== URL ===== */
+const p=new URLSearchParams(location.search);
+const site=(p.get("site")||"").trim() || "A";
+const tool=(p.get("tool")||"").trim();
+const toolName=TOOL_NAME[tool]||"不明";
+
+/* ===== 共通 ===== */
+const app=document.getElementById("app");
+const hdr=document.getElementById("hdr");
+let historyOpen = false; // ★ 追加：未定義防止
+
+function toast(a,b="",ms=2200){
+  const d=document.createElement("div");
+  d.className="toast";
+  d.innerHTML=`<div style="font-size:20px">${a}</div><div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`;
+  document.body.appendChild(d);
+  setTimeout(()=>d.remove(),ms);
+}
+
+function getUser(){return localStorage.getItem("user")||"";}
+function setUser(n){localStorage.setItem("user",n);}
+
+/* ===== 通信 ===== */
+async function post(action, photoDataUrl){
+  const payload={ datetime:new Date().toISOString(), site, tool, toolName, action, user:getUser() };
+  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
+  const r = await fetch(GAS_URL,{ method:"POST", body:JSON.stringify(payload) });
+  if(!r.ok) throw new Error("http "+r.status);
+  const js = await r.json();
+  if(js.result!=="ok") throw new Error(js.message||"gas error");
+}
+
+async function getStatus(){
+  const r = await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`);
+  const js = await r.json();
+  if(js.result!=="ok") throw new Error();
+  return js.items||[];
+}
+
+/* ===== history（安全化） ===== */
 async function getHistory(){
   const r = await fetch(
     `${GAS_URL}?mode=history&site=${encodeURIComponent(site)}&tool=${encodeURIComponent(tool)}&t=${Date.now()}`
@@ -12,8 +88,9 @@ async function getHistory(){
 }
 
 async function toggleHistory(){
-  historyOpen = !historyOpen;
   const box = document.getElementById("hist");
+  if(!box) return;          // ★ DOM無ければ何もしない
+  historyOpen = !historyOpen;
   if(!historyOpen){
     box.classList.add("hidden");
     return;
@@ -23,12 +100,24 @@ async function toggleHistory(){
   try{
     const items = await getHistory();
     box.innerHTML = items.length ? items.map(x=>{
-      return `<div class="histRow">
-        ${new Date(x.at).toLocaleString()} / ${x.action} / ${x.user}
-      </div>`;
-    }).join("") : `<div class="histRow">履歴なし</div>`;
+      return `<div>${new Date(x.at).toLocaleString()} / ${x.action} / ${x.user}</div>`;
+    }).join("") : `<div>履歴なし</div>`;
   }catch{
-    box.innerHTML = `<div class="histRow">取得失敗</div>`;
+    box.innerHTML = `<div>取得失敗</div>`;
   }
 }
+
+/* ===== UI最小 ===== */
+function header(){
+  hdr.textContent = `現場：${site}　道具：${toolName}　端末：${getUser()||"未設定"}`;
+}
+function render(){
+  header();
+  app.innerHTML = `<div class="card"><button onclick="take()">持ち出し</button></div>`;
+}
+window.take=async()=>{ await post("持ち出し"); toast("OK"); };
+
+render();
 </script>
+</body>
+</html>
